Fix Kafka server API changes

--- a/smallrye-reactive-messaging-kafka-test-companion/pom.xml
+++ b/smallrye-reactive-messaging-kafka-test-companion/pom.xml
@@ -78,6 +78,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-transaction-coordinator</artifactId>
+      <version>${kafka.version}</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
       <artifactId>kafka-storage</artifactId>
       <version>${kafka.version}</version>
       <optional>true</optional>
