--- a/smallrye-reactive-messaging-kafka-test-companion/pom.xml
+++ b/smallrye-reactive-messaging-kafka-test-companion/pom.xml
@@ -102,7 +102,7 @@
       <optional>true</optional>
     </dependency>
 
-    <!-- Ensure log4j log backend with slf4j -->
+    <!-- Ensure log4j2 log backend with slf4j -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-reload4j</artifactId>
