--- a/smallrye-reactive-messaging-kafka-test-companion/src/main/resources/log4j.properties
+++ b/smallrye-reactive-messaging-kafka-test-companion/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
 
-#log4j.logger.org.apache.kafka=debug
+log4j.logger.org.apache.kafka=WARN
 log4j.logger.org.apache.kafka.clients.producer.ProducerConfig=WARN
 log4j.logger.org.apache.kafka.clients.admin.AdminClientConfig=WARN
 log4j.logger.org.apache.kafka.clients.consumer.ConsumerConfig=WARN
