--- a/smallrye-reactive-messaging-kafka/pom.xml
+++ b/smallrye-reactive-messaging-kafka/pom.xml
@@ -129,7 +129,7 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- Ensure log4j log backend with slf4j -->
+    <!-- Ensure log4j2 log backend with slf4j -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-reload4j</artifactId>
