Graceful shutdown for named worker pools

--- a/smallrye-reactive-messaging-provider/src/test/resources/config/worker-config.properties
+++ b/smallrye-reactive-messaging-provider/src/test/resources/config/worker-config.properties
@@ -1,2 +1,4 @@
 smallrye.messaging.worker.my-pool.max-concurrency=2
+smallrye.messaging.worker.my-pool.shutdown-timeout=100
+smallrye.messaging.worker.my-pool.shutdown-check-interval=10
 smallrye.messaging.worker.another-pool.max-concurrency=5
