Update for MP Telemetry 2.1
Bump version numbers
Fix semantic convention issues

--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,9 @@
 
     <kafka.version>4.0.0</kafka.version>
 
-    <opentelemetry.instrumentation.version>2.5.0-alpha</opentelemetry.instrumentation.version>
-    <opentelemetry-semconv.version>1.25.0-alpha</opentelemetry-semconv.version>
+    <opentelemetry.instrumentation.version>2.14.0</opentelemetry.instrumentation.version>
+    <opentelemetry.version>1.48.0</opentelemetry.version>
+    <opentelemetry-semconv.version>1.32.0</opentelemetry-semconv.version>
 
     <smallrye-vertx-mutiny-clients.version>3.19.1</smallrye-vertx-mutiny-clients.version>
     <smallrye-reactive-converters.version>3.0.0</smallrye-reactive-converters.version>
@@ -288,9 +289,16 @@
 
       <!-- This BOM includes the opentelemetry-bom and the opentelemetry-bom-alpha -->
       <dependency>
+        <groupId>io.opentelemetry</groupId>
+        <artifactId>opentelemetry-bom</artifactId>
+        <version>${opentelemetry.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>io.opentelemetry.instrumentation</groupId>
         <artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
-        <version>${opentelemetry.instrumentation.version}</version>
+        <version>${opentelemetry.instrumentation.version}-alpha</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -368,6 +376,11 @@
             <artifactId>opentelemetry-api</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>io.opentelemetry.semconv</groupId>
+        <artifactId>opentelemetry-semconv-incubating</artifactId>
+        <version>${opentelemetry-semconv.version}-alpha</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
