--- a/smallrye-reactive-messaging-otel/pom.xml
+++ b/smallrye-reactive-messaging-otel/pom.xml
@@ -30,6 +30,10 @@
       <artifactId>opentelemetry-semconv</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.opentelemetry.semconv</groupId>
+      <artifactId>opentelemetry-semconv-incubating</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.opentelemetry.instrumentation</groupId>
       <artifactId>opentelemetry-instrumentation-api</artifactId>
     </dependency>
